--- a/src/app/Pages/projects/projects/projects.html
+++ b/src/app/Pages/projects/projects/projects.html
@@ -1,177 +1,223 @@
 <div class="text-white team">
-    <div class="d-flex justify-content-end align-items-center headerText">
+  <div class="d-flex justify-content-end align-items-center headerText">
+    <h1 class="big mb-0">PROJECTS</h1>
+  </div>
 
-        <h1 class=" big mb-0">PROJECTS</h1>
-
-    </div>
-    <div class=" p-md-5 p-3 rounded team-container">
-        <div class=" row g-3 g-lg-4">
-            <div class="col-lg-6 pb-3 pe-lg-3 ps-lg-2 ">
-              <div class="p-4 rounded right-box h-100">
+  <div class="p-md-5 p-3 rounded team-container">
+    <div class="row g-3 g-lg-4">
+      <!-- Left box -->
+      <div class="col-lg-6 pb-3 pe-lg-3 ps-lg-2">
+        <div class="p-4 rounded right-box h-100">
           <div class="headerBox d-flex justify-content-between align-items-start">
             <div class="text">
               <h2 class="mb-xl-3 mb-sm-4 mb-3">NEW PROJECTS</h2>
-              <p class="mb-0">IN THE PAST 30 DAYS</p>
+              <p class="mb-0">{{ periodText }}</p>
             </div>
+
             <div class="imageLeft">
               <img class="mb-3 pb-3 px-0" src="assets/img/Rectangle 721.png" alt="" />
             </div>
           </div>
 
           <div class="bottomBox mt-3 d-flex mb-0 justify-content-between align-items-start">
-            <h6 class="text-white mb-0">15</h6>
+            <h6 class="text-white mb-0">
+              {{ analytics()?.currentPeriodCount ?? 0 }}
+            </h6>
 
-            <div class="leftBottom h-100 ">
-                <div class="mb-3">
-                                            <p class="p-0 m-0   align-content-start w-100">INCREASE</p>
+            <div class="leftBottom h-100">
+              <div class="mb-3">
+                <p class="p-0 m-0 align-content-start w-100">
+                  {{ (analytics()?.isIncreased ?? true) ? 'INCREASE' : 'DECREASE' }}
+                </p>
+              </div>
 
-                </div>
-                <div class="m-0 d-flex gap-2 align-items-end ">
-                    <img class=" " width="22" src="assets/img/Arrow 1.svg" alt="">
-                                                <h5 class="p-0 h3 m-0  ">30%</h5>
+              <div class="m-0 d-flex gap-2 align-items-end">
+                <img
+                  width="22"
+                  [src]="(analytics()?.isIncreased ?? true) ? 'assets/img/Arrow 1.svg' : 'assets/img/ArrowDown.svg'"
+                  alt=""
+                />
 
-
-                </div>
-   
+                <h5
+                  class="p-0 h3 m-0"
+                  [ngClass]="{ textColor: analytics()?.isIncreased === false }"
+                >
+                  {{ analytics()?.differenceCount ?? 0 }}%
+                </h5>
+              </div>
             </div>
           </div>
-        </div>
-            </div>
-            <div class="col-12 col-lg-6 pb-3 mt-sm-2 pe-lg-4 mt-0">
-        <div class="d-flex flex-column justify-content-between gap-1">
-                    <div class="dropdown text-end">
-                        <div class="select" (click)="toggleMenu()">
-                            <div class="caret">
-                                <i class="fa-solid fa-angle-down fs-5" [class.rotate]="isOpen" style="color: #00bec5;">
-                                </i>
-                            </div>
-                            <span class="selected fs-2">{{ selected() }}</span>
 
-                        </div>
+        </div>
+      </div>
+
+      <!-- Right box -->
+      <div class="col-12 col-lg-6 pb-3 mt-sm-2 pe-lg-4 mt-0">
+        <div class="d-flex flex-column justify-content-between gap-2">
+
+
+          <!-- ✅ Dropdown months فقط -->
+          <div class="dropdown text-end">
+            <div class="select" (click)="togglePeriodMenu()">
+              <div class="caret">
+                <i
+                  class="fa-solid fa-angle-down fs-5"
+                  [class.rotate]="isPeriodOpen"
+                  style="color: #00bec5"
+                ></i>
+              </div>
+              <span class="selected fs-6">{{ selectedPeriod().label }}</span>
+            </div>
             <p class="small mb-1 text-end">KEEP THE GOOD WORK!!</p>
-                        <ul class="p-3 rounded menu list-unstyled text-end" [class.menu-open]="isOpen">
-                            <li *ngFor="let option of options" (click)="selectOption(option)"
-                                [class.active]="selected() === option">
-                                {{ option }}
-                            </li>
-                        </ul>
 
-                    </div>
-                    <div class="flex-wrap  pb-2 rounded d-flex  gap-4 mb-2">
-                        <div class="text-center col seletType " [class.active]="selectedProjectType() === 0"
-                            (click)="selectProjectType(0)">
-                            <p class="mb-0">One time  </p>
-                        </div>
 
-                        <div class="text-center col seletType " [class.active]="selectedProjectType() === 1"
-                            (click)="selectProjectType(1)">
-                            <p class="mb-0">
-                                Social Media</p>
-                        </div>
+            <ul class="p-3 rounded menu list-unstyled text-end" [class.menu-open]="isPeriodOpen">
+              @for (p of periodOptions; track p.value) {
+                <li (click)="selectPeriod(p)" [class.active]="selectedPeriod().value === p.value">
+                  {{ p.label }}
+                </li>
+              }
+            </ul>
+          </div>
 
-                        <div class="text-center col seletType " [class.active]="selectedProjectType() === 2"
-                            (click)="selectProjectType(2)">
-                            <p class="mb-0">Media Buying </p>
-                        </div>
-                    </div>
-
-                    <div class="flex-wrap  py-2 rounded d-flex blue ">
-                        <div class="p-0 text-center col me-5 ms-1">
-                            <p class="mb-0">Completed</p>
-                            <p class="mb-0 fs-3">{{ getProjectCounts().completed| leadingZero }}</p>
-                        </div>
-
-                        <div class="p-0 text-center col me-5">
-                            <p class="mb-0">Paused</p>
-                            <p class="mb-0 fs-3">{{ getProjectCounts().paused| leadingZero }}</p>
-                        </div>
-
-                        <div class="p-0 text-center col">
-                            <p class="mb-0">In Progress </p>
-                            <p class="mb-0 fs-3">{{ getProjectCounts().inProgress | leadingZero }}</p>
-                        </div>
-                    </div>
-                </div>
+          <!-- Type buttons -->
+          <div class="flex-wrap pb-2 rounded d-flex gap-4 mb-2 mt-2">
+            <div class="text-center col seletType" [class.active]="selectedProjectType() === 0" (click)="selectType(0)">
+              <p class="mb-0">One time</p>
             </div>
+
+            <div class="text-center col seletType" [class.active]="selectedProjectType() === 1" (click)="selectType(1)">
+              <p class="mb-0">Social Media</p>
+            </div>
+
+            <div class="text-center col seletType" [class.active]="selectedProjectType() === 2" (click)="selectType(2)">
+              <p class="mb-0">Media Buying</p>
+            </div>
+          </div>
+
+          <!-- Counts -->
+          <div class="flex-wrap py-2 rounded d-flex blue">
+            <div class="p-0 text-center col me-5 ms-1">
+              <p class="mb-0">Completed</p>
+              <p class="mb-0 fs-3">{{ getProjectCounts().completed | leadingZero }}</p>
+            </div>
+
+            <div class="p-0 text-center col me-5">
+              <p class="mb-0">Paused</p>
+              <p class="mb-0 fs-3">{{ getProjectCounts().paused | leadingZero }}</p>
+            </div>
+
+            <div class="p-0 text-center col">
+              <p class="mb-0">In Progress</p>
+              <p class="mb-0 fs-3">{{ getProjectCounts().inProgress | leadingZero }}</p>
+            </div>
+          </div>
+
         </div>
-        <div class="mt-0 row g-lg-4">
-            <div class="card-box row">
-
-                @for (project of filteredProjects(); track project.id) {
-
-                <div class="col-lg-3 col-md-6 col-12 mt-3 me-0 cards">
-                    <a [routerLink]="['/projectDetails', project.id]" class="text-decoration-none text-white">
-                        <div class="card position-relative">
-                            <div class="cardOptions">
-                                <div class="w-100 p-2 d-flex justify-content-between">
-                                    <i class="fa-solid fa-trash" (click)="onDelete(project, $event)"></i>
-                                    <i class="fa-solid fa-pen-to-square" (click)="onEdit(project, $event)"></i>
-                                </div>
-                            </div>
-
-                            <img [src]="baseimageUrl+ project.clientImage" height="300px" class="card-img-top"
-                                alt="{{ project.clientName }}">
-                            <div class="pb-0 card-body">
-                                <h6 class="mb-1 fw-bold card-title">{{ project.clientName}}</h6>
-                                <h5 class="mb-1 card-text">{{ project.projectDescription| shorten: 20}}</h5>
-                                <p>{{ project.createdAt | date}}</p>
-                                <div class="mt-4 row">
-                                    <div class="col ">
-                                        @switch (project.projectType) {
-                                        @case (0) { <h6 class="mb-3 booked  mb-0">One time  Project </h6> }
-                                        @case (1) { <h6 class="mb-3 booked  mb-0">Social Media</h6> }
-                                        @case (2) { <h6 class="mb-3 booked  mb-0">Media Buying </h6> }
-                                        }
-                                    </div>
-
-                                    <div class="col text-end">
-                                        @switch (project.projectStatus) {
-                                        @case (0) { <p class="mb-3 mb-0">In Progress </p> }
-                                        @case (1) { <p class="mb-3 mb-0">Paused</p> }
-                                        @case (2) { <p class="mb-3 mb-0">Completed </p> }
-                                        }
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                }
-                @empty {
-
-                <div class="text-center py-5 w-100">
-                    <p class="text-muted fs-5">No data available at the moment.</p>
-                </div>
-                }
-            </div>
-         @if (totalPages() > 1) {
-  <div class="pagination mt-5">
-    <button class="nav-btn" (click)="prevPage()" [disabled]="!hasPreviousPage()">
-      previous
-    </button>
-
-    <div class="pages">
-      @for (page of visiblePages; track page) {
-        <button 
-          class="page" 
-          [class.active]="page === currentPage()" 
-          [disabled]="page === currentPage()"
-          (click)="goToPage(page)"
-        >
-          {{ page }}
-        </button>
-      }
+      </div>
     </div>
 
-    <button class="nav-btn" (click)="nextPage()" [disabled]="!hasNextPage()">
-      Next
-    </button>
+    <!-- Loading / Error -->
+    @if (isLoading()) {
+      <div class="text-center py-5 w-100">
+        <div class="spinner-border text-info" role="status"></div>
+        <p class="mt-2">Loading data...</p>
+      </div>
+    }
+    @else if (errorMessage()) {
+      <div class="text-center py-5 w-100">
+        <p class="text-danger fw-bold">{{ errorMessage() }}</p>
+      </div>
+    }
+    @else {
+
+      <!-- Cards -->
+      <div class="mt-0 row g-lg-4">
+        <div class="card-box row g-3">
+
+          @for (project of projects(); track project.id) {
+            <div class="col-12 col-md-6 col-lg-3 mt-3 me-0 cards">
+              <a [routerLink]="['/projectDetails', project.id]" class="text-decoration-none text-white d-block h-100">
+                <div class="card position-relative h-100">
+                  <div class="cardOptions">
+                    <div class="w-100 p-2 d-flex justify-content-between">
+                      <i class="fa-solid fa-trash" (click)="onDelete(project, $event)"></i>
+                      <i class="fa-solid fa-pen-to-square" (click)="onEdit(project, $event)"></i>
+                    </div>
+                  </div>
+
+                  <img
+                    [src]="baseimageUrl + project.clientImage"
+                    class="card-img-top team-card-img"
+                    alt="{{ project.clientName }}"
+                  />
+
+                  <div class="pb-0 card-body">
+                    <h6 class="mb-1 fw-bold card-title">{{ project.clientName }}</h6>
+                    <h5 class="mb-1 card-text">{{ project.projectDescription | shorten: 20 }}</h5>
+                    <p>{{ project.createdAt | date }}</p>
+
+                    <div class="mt-4 row">
+                      <div class="col">
+                        @switch (project.projectType) {
+                          @case (0) { <h6 class="mb-3 booked mb-0">One time Project</h6> }
+                          @case (1) { <h6 class="mb-3 booked mb-0">Social Media</h6> }
+                          @case (2) { <h6 class="mb-3 booked mb-0">Media Buying</h6> }
+                        }
+                      </div>
+
+                      <div class="col text-end">
+                        @switch (project.projectStatus) {
+                          @case (0) { <p class="mb-3 mb-0">In Progress</p> }
+                          @case (1) { <p class="mb-3 mb-0">Paused</p> }
+                          @case (2) { <p class="mb-3 mb-0">Completed</p> }
+                        }
+                      </div>
+                    </div>
+
+                  </div>
+                </div>
+              </a>
+            </div>
+          }
+          @empty {
+            <div class="text-center py-5 w-100">
+              <p class="text-muted fs-5">No data available at the moment.</p>
+            </div>
+          }
+        </div>
+
+        <!-- Pagination -->
+        @if (totalPages() > 1) {
+          <div class="pagination mt-5">
+            <button class="nav-btn" (click)="prevPage()" [disabled]="!hasPreviousPage()">
+              previous
+            </button>
+
+            <div class="pages">
+              @for (page of visiblePages; track page) {
+                <button
+                  class="page"
+                  [class.active]="page === currentPage()"
+                  [disabled]="page === currentPage()"
+                  (click)="goToPage(page)"
+                >
+                  {{ page }}
+                </button>
+              }
+            </div>
+
+            <button class="nav-btn" (click)="nextPage()" [disabled]="!hasNextPage()">
+              Next
+            </button>
+          </div>
+        }
+      </div>
+    }
   </div>
-}
 
-        </div>
-    </div>
-
-            <h2 class=" pt-sm-4 logout  text-end" style="color: #00bec5; cursor: pointer;" routerLink="/addproject">Add Project <i
-                class="fa-solid fa-arrow-right fs-5" style="color: #00bec5;"></i></h2>
+  <h2 class="pt-sm-4 logout text-end" style="color: #00bec5; cursor: pointer;" routerLink="/addproject">
+    Add Project
+    <i class="fa-solid fa-arrow-right fs-5" style="color: #00bec5;"></i>
+  </h2>
 </div>
