--- a/src/app/Pages/projects/projects/projects.scss
+++ b/src/app/Pages/projects/projects/projects.scss
@@ -8,6 +8,10 @@
 h6{
   white-space: nowrap;
 }
+.textColor{
+  color: #C50003 !important;
+
+}
 .card {
   position: relative;
   overflow: hidden; // عشان ما يخرجش أي جزء برا الكارت
