--- a/src/app/Layout/navbar/navbar.html
+++ b/src/app/Layout/navbar/navbar.html
@@ -2,7 +2,7 @@
 <div class="container">
   <div class="row">
     <div class="mt-5 px-0 navbar navbar-expand-lg">
-      <div class="container px-0 mx-0 w-100">
+      <div class="container">
         <a class="border-0 logo navbar-brand text-start me-xl-5 pe-xl-5" routerLink="/">
           <img class="border-0" src="assets/img/logo.svg" alt="Logo" />
         </a>
