--- a/src/app/Pages/client/client.scss
+++ b/src/app/Pages/client/client.scss
@@ -9,6 +9,9 @@
   color: #0b6b6e;
   font-weight: 900 ;
 }
+.textColor{
+  color: #C50003 !important;
+}
 .seletType{
   background: #0B6B6E33;
  padding: 10px 10px;
