--- a/src/app/Pages/home/home.html
+++ b/src/app/Pages/home/home.html
@@ -132,6 +132,6 @@
         </div>
     </div>
 
-            <h2 class=" pt-sm-4 logout text-end" style="color: #00bec5; cursor: pointer;" routerLink="/addemployee">Add Employee <i
+            <h2 class=" pt-sm-4 logout text-end mt-5" style="color: #00bec5; cursor: pointer;" routerLink="/addemployee">Add Employee <i
                 class="fa-solid fa-arrow-right fs-5" style="color: #00bec5;"></i></h2>
 </div>
