--- a/src/app/Pages/projects/projects/projects.html
+++ b/src/app/Pages/projects/projects/projects.html
@@ -34,7 +34,7 @@
               <div class="m-0 d-flex gap-2 align-items-end">
                 <img
                   width="22"
-                  [src]="(analytics()?.isIncreased ?? true) ? 'assets/img/Arrow 1.svg' : 'assets/img/ArrowDown.svg'"
+                  [src]="(analytics()?.isIncreased ?? true) ? 'assets/img/Arrow 1.svg' : 'assets/img/ArrowDown.png'"
                   alt=""
                 />
 
@@ -216,7 +216,7 @@
     }
   </div>
 
-  <h2 class="pt-sm-4 logout text-end" style="color: #00bec5; cursor: pointer;" routerLink="/addproject">
+  <h2 class="pt-sm-4 logout text-end mt-5" style="color: #00bec5; cursor: pointer;" routerLink="/addproject">
     Add Project
     <i class="fa-solid fa-arrow-right fs-5" style="color: #00bec5;"></i>
   </h2>
