--- a/src/app/Pages/client/client.html
+++ b/src/app/Pages/client/client.html
@@ -163,7 +163,7 @@
     </div>
   </div>
 
-      <h2 class="pt-sm-4 logout  text-end" style="color: #00bec5; cursor: pointer" routerLink="/addclient">
+      <h2 class="pt-sm-4 logout  text-end mt-5" style="color: #00bec5; cursor: pointer" routerLink="/addclient">
       Add Client <i class="fa-solid fa-arrow-right fs-5" style="color: #00bec5"></i>
     </h2>
 </div>
